<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sharedViewModel"
            type="com.lrm.lunchtray.model.OrderViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderSummaryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_back_icon"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/order_summary"
                    android:fontFamily="@font/text_font"
                    android:textColor="@color/pumpkin_orange"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:background="?attr/dividerHorizontal"/>

    <TextView
        android:id="@+id/main_course_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_courses"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/main_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/main_courses"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/main_course_head"
        app:layout_constraintStart_toStartOf="@id/main_course_head"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text='@{sharedViewModel.mainCourse.name}'/>

    <TextView
        android:id="@+id/main_course_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sample_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toTopOf="@id/main_course"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:text="@{@string/price(sharedViewModel.mainCourse.price)}"/>

    <TextView
        android:id="@+id/side_dish_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_dishes"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/main_course"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/side_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/side_dishes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/side_dish_head"
        app:layout_constraintStart_toStartOf="@id/side_dish_head"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text='@{sharedViewModel.sideDish.name}'/>

    <TextView
        android:id="@+id/side_dish_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sample_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toTopOf="@id/side_dish"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:text="@{@string/price(sharedViewModel.sideDish.price)}"/>

    <TextView
        android:id="@+id/snacks_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/side_dish"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/snacks"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/snacks_head"
        app:layout_constraintStart_toStartOf="@id/snacks_head"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text='@{sharedViewModel.snacks.name}'/>

    <TextView
        android:id="@+id/snacks_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sample_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toTopOf="@id/snacks"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:text="@{@string/price(sharedViewModel.snacks.price)}"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/snacks"
        android:layout_marginTop="20dp"
        android:background="?attr/dividerHorizontal"/>

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/subtotal"
        android:text="@{@string/subtotal(sharedViewModel.subtotal)}"
        android:textSize="18sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tax"
        android:text="@{@string/tax(sharedViewModel.tax)}"
        android:textSize="18sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/subtotal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/total"
        android:text="@{@string/total(sharedViewModel.total)}"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/text_font"
        app:layout_constraintTop_toBottomOf="@id/tax"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/total"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/pumpkin_orange"
        android:text="@string/submit_order"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_order"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/submit_order"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel_order"
        android:textColor="@color/pumpkin_orange"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>