<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sharedViewModel"
            type="com.lrm.lunchtray.model.OrderViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SideDishFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_back_icon"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/side_dishes"
                    android:fontFamily="@font/text_font"
                    android:textColor="@color/pumpkin_orange"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:background="?attr/dividerHorizontal"/>

    <RadioGroup
        android:id="@+id/side_dish_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sd_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="Noodles"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:buttonTint="@color/pumpkin_orange"
                android:text='@{sharedViewModel.menuItems["sd1"].name}'
                android:onClick='@{() -> sharedViewModel.setSideDish("sd1")}'
                android:checked='@{sharedViewModel.sideDish.code.equals("sd1")}'/>

            <TextView
                android:id="@+id/sd_1_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sd_1"
                app:layout_constraintBottom_toBottomOf="@id/sd_1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                tools:text="@string/sample_price"
                android:text='@{sharedViewModel.menuItems["sd1"].getFormattedPrice}'/>

            <TextView
                android:id="@+id/sd_1_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sd_1"
                tools:text="Chicken noodle with spicy masala, sprinkled pepper, with tomato sauce"
                android:text='@{sharedViewModel.menuItems["sd1"].description}'/>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/sd_1_description"
                android:layout_marginTop="10dp"
                android:background="?attr/dividerHorizontal"/>

            <RadioButton
                android:id="@+id/sd_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="Noodles"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:buttonTint="@color/pumpkin_orange"
                android:text='@{sharedViewModel.menuItems["sd2"].name}'
                android:onClick='@{() -> sharedViewModel.setSideDish("sd2")}'
                android:checked='@{sharedViewModel.sideDish.code.equals("sd2")}'/>

            <TextView
                android:id="@+id/sd_2_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sd_2"
                app:layout_constraintBottom_toBottomOf="@id/sd_2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                tools:text="@string/sample_price"
                android:text='@{sharedViewModel.menuItems["sd2"].getFormattedPrice}'/>

            <TextView
                android:id="@+id/sd_2_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sd_2"
                tools:text="Chicken noodle with spicy masala, sprinkled pepper"
                android:text='@{sharedViewModel.menuItems["sd2"].description}'/>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/sd_2_description"
                android:layout_marginTop="10dp"
                android:background="?attr/dividerHorizontal"/>

            <RadioButton
                android:id="@+id/sd_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="Noodles"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:buttonTint="@color/pumpkin_orange"
                android:text='@{sharedViewModel.menuItems["sd3"].name}'
                android:onClick='@{() -> sharedViewModel.setSideDish("sd3")}'
                android:checked='@{sharedViewModel.sideDish.code.equals("sd3")}'/>

            <TextView
                android:id="@+id/sd_3_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sd_3"
                app:layout_constraintBottom_toBottomOf="@id/sd_3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                tools:text="@string/sample_price"
                android:text='@{sharedViewModel.menuItems["sd3"].getFormattedPrice}'/>

            <TextView
                android:id="@+id/sd_3_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sd_3"
                tools:text="Chicken noodle with spicy masala, sprinkled pepper, with tomato sauce"
                android:text='@{sharedViewModel.menuItems["sd3"].description}'/>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/sd_3_description"
                android:layout_marginTop="10dp"
                android:background="?attr/dividerHorizontal"/>

            <RadioButton
                android:id="@+id/sd_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="Noodles"
                app:layout_constraintTop_toBottomOf="@id/divider4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:buttonTint="@color/pumpkin_orange"
                android:text='@{sharedViewModel.menuItems["sd4"].name}'
                android:onClick='@{() -> sharedViewModel.setSideDish("sd4")}'
                android:checked='@{sharedViewModel.sideDish.code.equals("sd4")}'/>

            <TextView
                android:id="@+id/sd_4_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/sd_4"
                app:layout_constraintBottom_toBottomOf="@id/sd_4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                tools:text="@string/sample_price"
                android:text='@{sharedViewModel.menuItems["sd4"].getFormattedPrice}'/>

            <TextView
                android:id="@+id/sd_4_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sd_4"
                tools:text="Chicken noodle with spicy masala, sprinkled pepper, with tomato sauce"
                android:text='@{sharedViewModel.menuItems["sd4"].description}'/>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/sd_4_description"
                android:layout_marginTop="10dp"
                android:background="?attr/dividerHorizontal"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/side_dish_options"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textStyle="bold"
        tools:text="@string/subtotal"
        android:text="@{@string/subtotal(sharedViewModel.subtotal)}"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/subtotal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/pumpkin_orange"
            android:backgroundTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:backgroundTint="@color/pumpkin_orange"
            android:textStyle="bold"
            android:layout_marginStart="60dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>